--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import "https://fonts.googleapis.com/css?family=Open+Sans";
 body {
   margin: 0; }
 
@@ -59,9 +60,6 @@ canvas {
 * {
   font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; }
 
-body {
-  background-image: linear-gradient(to bottom right, #ff9800, #ffa726); }
-
 .blue {
   color: #29b6f6; }
 
@@ -77,19 +75,19 @@ body {
 .red {
   color: #ef5350; }
 
-.content {
+.flip-content {
   height: 100vh;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center; }
 
-.card {
+.flip {
   perspective: 150rem;
   height: 20rem;
   width: 30rem;
   position: relative; }
-  .card__side {
+  .flip__side {
     height: 15rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -101,31 +99,64 @@ body {
     border-radius: 3px;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4); }
-    .card__side--front {
+    .flip__side--front {
       background-color: #1c1c1c; }
-    .card__side--back {
+    .flip__side--back {
       transform: rotateY(180deg);
       background-color: #1c1c1c; }
-  .card:hover .card__side--front {
+  .flip:hover .flip__side--front {
     transform: rotateY(-180deg); }
-  .card:hover .card__side--back {
+  .flip:hover .flip__side--back {
     transform: rotateY(0deg); }
-  .card__cont {
+  .flip__cont {
     height: 15rem;
     background-color: #1c1c1c;
     display: flex;
     align-items: center;
     justify-content: center; }
-  .card__cta {
+  .flip__cta {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
     color: white; }
-    .card__cta p {
+    .flip__cta p {
       margin-left: 1rem; }
-      .card__cta p > .space {
+      .flip__cta p > .space {
         margin-left: 2rem; }
+
+/* Draggable menu */
+.center {
+  position: absolute; }
+
+.menu {
+  width: 40px;
+  height: 40px; }
+
+.title {
+  width: 300px;
+  height: 10px;
+  top: 60px; }
+
+.item {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  cursor: pointer;
+  text-align: center;
+  line-height: 40px; }
+
+i {
+  font-size: 24px;
+  color: #222222; }
+
+/* ---------------- */
 
 /*# sourceMappingURL=index.css.map */
